BornAgain-1.10.0, released 2017.10.09
  > MacOS specific
    1) 10.9 (Mavericks) is not supported anymore. Minimum supported 10.10 (Yosemite).
  > API changes
    1) FormFactorTrivial renamed to FormFactorDot
    2) IParticle: applyTranslation -> translate; applyRotation -> rotate
  > Summary:
    1) Integration over rotation angle for square and hexagonal lattices.
    2) Trapezoid resolution function to describe instruments with neutron velocity selector.
    3) GUI: possibility to rotate imported experimental data.
    4) GUI: support for mesocrystals.
    5) GUI: added form factor of a dot.
    6) GUI: import of sample from Python script to GUI (experimental).
    7) Bugfixes.

  * Bug #1509: Version string should be different for executables generated from 'develop', from feature branches, or from 'master'
  * Bug #1626: Specular calculation gives weird results below critical angle in presence of top layer absorption
  * Bug #1788: Numerical instability in triangular ripple form factor
  * Bug #1806: GUI: Zoom of imported data does not work after applying a mask or ROI
  * Bug #1815: GUI: FitView sometimes stops fit progress update
  * Bug #1827: GUI: fix SessionModelDelegate for group property
  * Bug #1828: Simulation cloning might lead to segfault if SampleBuiler present
  * Bug #1830: Integration over xi is not translated to Python for square and hexagonal lattices
  * Bug #1832: Fitting example FitSphereInHexLattice runs suspiciously long
  * Bug #1834: Python examples do not work in Jupiter notebook
  * Bug #1845: GUI: add and implement correct translators for the parameters of MesoCrystalItem
  * Feature #1257: GUI: provide import into GUI model from python script
  * Feature #1579: provide trapezoid resolution function to describe instruments with neutron velocity selector
  * Feature #1617: Implement rotation of 2D OutputData on 90 deg
  * Feature #1618: Implement rotation of imported data in ImportData view