@@ -1,3 +1,6 @@
+  > API changes
+    1) detector axes units (e.g. ba.IDetector2D.NBINS) now accessed through DetectorAxesUnits (e.g. ba.DetectorAxesUnits.NBINS)
+
 BornAgain-1.10.0, released 2017.10.09
   > MacOS specific
     1) 10.9 (Mavericks) is not supported anymore. Minimum supported 10.10 (Yosemite).
